--- a/style/mysty.sty
+++ b/style/mysty.sty
@@ -887,7 +887,7 @@
 
 \newcommand{\al}{\alpha}
 \newcommand{\gam}{\gamma}
-\newcommand{\the}{\theta}
+% \newcommand{\the}{\theta}
 \newcommand{\vthe}{\vartheta}
 \newcommand{\epsi}{\varepsilon}
 \newcommand{\kap}{\kappa}
